implement building with jdk-11
what was done:
- updated gradle-wrapper to ver 5.3.1
- updated spring-boot to ver 1.5.20
- updated build.gradle
- updated .gitignore
- used `clazz.getDeclaredConstructor().newInstance()` in `ApplicationUtils.merge()` instead deprecated `clazz.newInstance()`